--- a/aten/src/ATen/CMakeLists.txt
+++ b/aten/src/ATen/CMakeLists.txt
@@ -148,7 +148,10 @@ endif(MKLDNN_FOUND)
 
 list(APPEND ATen_CPU_DEPENDENCY_LIBS cpuinfo)
 
-if(NOT MSVC AND NOT EMSCRIPTEN)
+hunter_add_package(sleef)
+find_package(sleef CONFIG REQUIRED)
+list(APPEND ATen_CPU_DEPENDENCY_LIBS sleef::sleef)
+if(FALSE AND NOT MSVC AND NOT EMSCRIPTEN)
   # Preserve values for the main build
   set(__aten_sleef_build_shared_libs ${BUILD_SHARED_LIBS})
   set(__aten_sleef_build_tests ${BUILD_TESTS})
